AbhiCompiler/projectcompiler/compiler/AbhiLang.java
/* Generated By:JavaCC: Do not edit this line. AbhiLang.java */
import visitor.*;
import visitor.CodeGenerationVisitor;
import syntaxtree.*;
import java.util.Vector;


public class AbhiLang implements AbhiLangConstants {
   public static void main(String[] args)
   {
      AbhiLang parser;
      if ( args.length == 0 )
      {
         System.out.println("AbhiLang Parser:  Reading from standard input . . .");
         parser = new AbhiLang(System.in);
      }
      else
         if ( args.length == 1 )
         {
            System.out.println("AbhiLang Parser:  Reading from file " + args[0]+ " . . .");
            try
            {
               parser = new AbhiLang(new java.io.FileInputStream(args[0]));
            }
            catch (java.io.FileNotFoundException e)
            {
               System.out.println("AbhiLang Parser:  File " + args[0]+ " not found.");
               return;
            }
         }
         else
         {
            System.out.println("AbhiLang Parser:  Usage is one of:");
            System.out.println("         java AbhiLang < inputfile");
            System.out.println("OR");
            System.out.println("         java AbhiLang inputfile");
            return;
         }
      try
      {
         Program prog = parser.Program();
         System.out.println("AbhiLang Parser: MiniJava program parsed successfully.");
         //PrettyPrintVisitor ptv = new PrettyPrintVisitor();
         //ptv.visit(prog);
         SymbolTableVisitor stv = new SymbolTableVisitor();
                
         prog.accept(stv);
                 
         TypeCheckVisitor tcv = new TypeCheckVisitor(stv.symTable);
         prog.accept(tcv);
         CodeGenerationVisitor cgv = new CodeGenerationVisitor();
         prog.accept(cgv,null);
      }
      catch (ParseException e)
      {
         System.out.println(e.getMessage());
         System.out.println("AbhiLang Parser:  Encountered errors during parse.");
      }
   }

  static final public Program Program() throws ParseException {
   MainClass n0;
   NodeListOptional n1 = new NodeListOptional();
   ClassDecl n2;
   NodeToken n3;
   Token n4;

   {
   }
    n0 = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      n2 = ClassDecl();
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
    n4 = jj_consume_token(0);
      n4.beginColumn++; n4.endColumn++;
      n3 = JTBToolkit.makeNodeToken(n4);
     {if (true) return new Program(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
   NodeToken n0;
   Token n1;
   ID n2;
   NodeToken n3;
   Token n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
   NodeToken n9;
   Token n10;
   NodeToken n11;
   Token n12;
   NodeToken n13;
   Token n14;
   NodeToken n15;
   Token n16;
   NodeToken n17;
   Token n18;
   NodeToken n19;
   Token n20;
   ID n21;
   NodeToken n22;
   Token n23;
   NodeToken n24;
   Token n25;
   Statement n26;
   NodeToken n27;
   Token n28;
   NodeToken n29;
   Token n30;

   {
   }
    n1 = jj_consume_token(CLASS);
                n0 = JTBToolkit.makeNodeToken(n1);
    n2 = ID();
    n4 = jj_consume_token(LBRACE);
                 n3 = JTBToolkit.makeNodeToken(n4);
    n6 = jj_consume_token(PUBLIC);
                 n5 = JTBToolkit.makeNodeToken(n6);
    n8 = jj_consume_token(STATIC);
                 n7 = JTBToolkit.makeNodeToken(n8);
    n10 = jj_consume_token(VOID);
                n9 = JTBToolkit.makeNodeToken(n10);
    n12 = jj_consume_token(MAIN);
                n11 = JTBToolkit.makeNodeToken(n12);
    n14 = jj_consume_token(LPAREN);
                  n13 = JTBToolkit.makeNodeToken(n14);
    n16 = jj_consume_token(STRING);
                  n15 = JTBToolkit.makeNodeToken(n16);
    n18 = jj_consume_token(LBRACKET);
                    n17 = JTBToolkit.makeNodeToken(n18);
    n20 = jj_consume_token(RBRACKET);
                    n19 = JTBToolkit.makeNodeToken(n20);
    n21 = ID();
    n23 = jj_consume_token(RPAREN);
                  n22 = JTBToolkit.makeNodeToken(n23);
    n25 = jj_consume_token(LBRACE);
                  n24 = JTBToolkit.makeNodeToken(n25);
    n26 = Statement();
    n28 = jj_consume_token(RBRACE);
                  n27 = JTBToolkit.makeNodeToken(n28);
    n30 = jj_consume_token(RBRACE);
                  n29 = JTBToolkit.makeNodeToken(n30);
     {if (true) return new MainClass(n0,n2,n3,n5,n7,n9,n11,n13,n15,n17,n19,n21,n22,n24,n26,n27,n29);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDecl() throws ParseException {
   NodeChoice n0;
   ClassDeclSimple n1;
   ClassDeclExtends n2;

   {
   }
    if (jj_2_1(3)) {
      n1 = ClassDeclSimple();
        n0 = new NodeChoice(n1, 0);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        n2 = ClassDeclExtends();
        n0 = new NodeChoice(n2, 1);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return new ClassDecl(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDeclSimple ClassDeclSimple() throws ParseException {
   NodeToken n0;
   Token n1;
   ID n2;
   NodeToken n3;
   Token n4;
   NodeListOptional n5 = new NodeListOptional();
   VarDecl n6;
   NodeListOptional n7 = new NodeListOptional();
   MethodDecl n8;
   NodeToken n9;
   Token n10;

   {
   }
    n1 = jj_consume_token(CLASS);
                n0 = JTBToolkit.makeNodeToken(n1);
    n2 = ID();
    n4 = jj_consume_token(LBRACE);
                 n3 = JTBToolkit.makeNodeToken(n4);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      n6 = VarDecl();
        n5.addNode(n6);
    }
     n5.nodes.trimToSize();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      n8 = MethodDecl();
        n7.addNode(n8);
    }
     n7.nodes.trimToSize();
    n10 = jj_consume_token(RBRACE);
                  n9 = JTBToolkit.makeNodeToken(n10);
     {if (true) return new ClassDeclSimple(n0,n2,n3,n5,n7,n9);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDeclExtends ClassDeclExtends() throws ParseException {
   NodeToken n0;
   Token n1;
   ID n2;
   NodeToken n3;
   Token n4;
   ID n5;
   NodeToken n6;
   Token n7;
   NodeListOptional n8 = new NodeListOptional();
   VarDecl n9;
   NodeListOptional n10 = new NodeListOptional();
   MethodDecl n11;
   NodeToken n12;
   Token n13;

   {
   }
    n1 = jj_consume_token(CLASS);
                n0 = JTBToolkit.makeNodeToken(n1);
    n2 = ID();
    n4 = jj_consume_token(EXTENDS);
                  n3 = JTBToolkit.makeNodeToken(n4);
    n5 = ID();
    n7 = jj_consume_token(LBRACE);
                 n6 = JTBToolkit.makeNodeToken(n7);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      n9 = VarDecl();
        n8.addNode(n9);
    }
     n8.nodes.trimToSize();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      n11 = MethodDecl();
        n10.addNode(n11);
    }
     n10.nodes.trimToSize();
    n13 = jj_consume_token(RBRACE);
                  n12 = JTBToolkit.makeNodeToken(n13);
     {if (true) return new ClassDeclExtends(n0,n2,n3,n5,n6,n8,n10,n12);}
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl VarDecl() throws ParseException {
   Type n0;
   ID n1;
   NodeToken n2;
   Token n3;

   {
   }
    n0 = Type();
    n1 = ID();
    n3 = jj_consume_token(SEMICOLON);
                    n2 = JTBToolkit.makeNodeToken(n3);
     {if (true) return new VarDecl(n0,n1,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDecl() throws ParseException {
   NodeToken n0;
   Token n1;
   Type n2;
   ID n3;
   NodeToken n4;
   Token n5;
   NodeListOptional n6 = new NodeListOptional();
   FormalList n7;
   NodeToken n8;
   Token n9;
   NodeToken n10;
   Token n11;
   NodeListOptional n12 = new NodeListOptional();
   VarDecl n13;
   NodeListOptional n14 = new NodeListOptional();
   Statement n15;
   NodeToken n16;
   Token n17;
   Exp n18;
   NodeToken n19;
   Token n20;
   NodeToken n21;
   Token n22;

   {
   }
    n1 = jj_consume_token(PUBLIC);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Type();
    n3 = ID();
    n5 = jj_consume_token(LPAREN);
                 n4 = JTBToolkit.makeNodeToken(n5);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_6;
      }
      n7 = FormalList();
        n6.addNode(n7);
    }
     n6.nodes.trimToSize();
    n9 = jj_consume_token(RPAREN);
                 n8 = JTBToolkit.makeNodeToken(n9);
    n11 = jj_consume_token(LBRACE);
                  n10 = JTBToolkit.makeNodeToken(n11);
    label_7:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_7;
      }
      n13 = VarDecl();
        n12.addNode(n13);
    }
     n12.nodes.trimToSize();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case PRINT:
      case WHILE:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_8;
      }
      n15 = Statement();
        n14.addNode(n15);
    }
     n14.nodes.trimToSize();
    n17 = jj_consume_token(RETURN);
                  n16 = JTBToolkit.makeNodeToken(n17);
    n18 = Exp();
    n20 = jj_consume_token(SEMICOLON);
                     n19 = JTBToolkit.makeNodeToken(n20);
    n22 = jj_consume_token(RBRACE);
                  n21 = JTBToolkit.makeNodeToken(n22);
     {if (true) return new MethodDecl(n0,n2,n3,n4,n6,n8,n10,n12,n14,n16,n18,n19,n21);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalList FormalList() throws ParseException {
   Type n0;
   ID n1;
   NodeListOptional n2 = new NodeListOptional();
   FormalRest n3;

   {
   }
    n0 = Type();
    n1 = ID();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_9;
      }
      n3 = FormalRest();
        n2.addNode(n3);
    }
     n2.nodes.trimToSize();
     {if (true) return new FormalList(n0,n1,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalRest FormalRest() throws ParseException {
   NodeToken n0;
   Token n1;
   Type n2;
   ID n3;

   {
   }
    n1 = jj_consume_token(COMMA);
                n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Type();
    n3 = ID();
     {if (true) return new FormalRest(n0,n2,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
   NodeChoice n0;
   IntArrayType n1;
   BooleanType n2;
   IntegerType n3;
   IdentifierType n4;

   {
   }
    if (jj_2_3(2)) {
      n1 = IntArrayType();
        n0 = new NodeChoice(n1, 0);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        n2 = BooleanType();
        n0 = new NodeChoice(n2, 1);
        break;
      case INT:
        n3 = IntegerType();
        n0 = new NodeChoice(n3, 2);
        break;
      case IDENTIFIER:
        n4 = IdentifierType();
        n0 = new NodeChoice(n4, 3);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return new Type(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public IntArrayType IntArrayType() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;

   {
   }
    n1 = jj_consume_token(INT);
              n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LBRACKET);
                   n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(RBRACKET);
                   n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new IntArrayType(n0,n2,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanType BooleanType() throws ParseException {
   NodeToken n0;
   Token n1;

   {
   }
    n1 = jj_consume_token(BOOLEAN);
                  n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new BooleanType(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public IntegerType IntegerType() throws ParseException {
   NodeToken n0;
   Token n1;

   {
   }
    n1 = jj_consume_token(INT);
              n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new IntegerType(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public IdentifierType IdentifierType() throws ParseException {
   NodeToken n0;
   Token n1;

   {
   }
    n1 = jj_consume_token(IDENTIFIER);
                     n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new IdentifierType(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
   NodeChoice n0;
   Block n1;
   IfStatement n2;
   WhileStatement n3;
   StatementPrint n4;
   Assign n5;
   ArrayAssign n6;

   {
   }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      n1 = Block();
        n0 = new NodeChoice(n1, 0);
      break;
    case IF:
      n2 = IfStatement();
        n0 = new NodeChoice(n2, 1);
      break;
    case WHILE:
      n3 = WhileStatement();
        n0 = new NodeChoice(n3, 2);
      break;
    case PRINT:
      n4 = StatementPrint();
        n0 = new NodeChoice(n4, 3);
      break;
    default:
      jj_la1[10] = jj_gen;
      if (jj_2_4(2)) {
        n5 = Assign();
        n0 = new NodeChoice(n5, 4);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          n6 = ArrayAssign();
        n0 = new NodeChoice(n6, 5);
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
     {if (true) return new Statement(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Block Block() throws ParseException {
   NodeToken n0;
   Token n1;
   StatementList n2;
   NodeToken n3;
   Token n4;

   {
   }
    n1 = jj_consume_token(LBRACE);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = StatementList();
    n4 = jj_consume_token(RBRACE);
            n3 = JTBToolkit.makeNodeToken(n4);
     {if (true) return new Block(n0,n2,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public StatementList StatementList() throws ParseException {
   NodeListOptional n0 = new NodeListOptional();
   Statement n1;

   {
   }
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case PRINT:
      case WHILE:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_10;
      }
      n1 = Statement();
        n0.addNode(n1);
    }
     n0.nodes.trimToSize();
     {if (true) return new StatementList(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public IfStatement IfStatement() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Exp n4;
   NodeToken n5;
   Token n6;
   Statement n7;
   NodeToken n8;
   Token n9;
   Statement n10;

   {
   }
    n1 = jj_consume_token(IF);
             n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
                 n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Exp();
    n6 = jj_consume_token(RPAREN);
                 n5 = JTBToolkit.makeNodeToken(n6);
    n7 = Statement();
    n9 = jj_consume_token(ELSE);
               n8 = JTBToolkit.makeNodeToken(n9);
    n10 = Statement();
     {if (true) return new IfStatement(n0,n2,n4,n5,n7,n8,n10);}
    throw new Error("Missing return statement in function");
  }

  static final public WhileStatement WhileStatement() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Exp n4;
   NodeToken n5;
   Token n6;
   Statement n7;

   {
   }
    n1 = jj_consume_token(WHILE);
                n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
                 n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Exp();
    n6 = jj_consume_token(RPAREN);
                 n5 = JTBToolkit.makeNodeToken(n6);
    n7 = Statement();
     {if (true) return new WhileStatement(n0,n2,n4,n5,n7);}
    throw new Error("Missing return statement in function");
  }

  static final public StatementPrint StatementPrint() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Exp n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;

   {
   }
    n1 = jj_consume_token(PRINT);
                n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
                 n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Exp();
    n6 = jj_consume_token(RPAREN);
                 n5 = JTBToolkit.makeNodeToken(n6);
    n8 = jj_consume_token(SEMICOLON);
                    n7 = JTBToolkit.makeNodeToken(n8);
     {if (true) return new StatementPrint(n0,n2,n4,n5,n7);}
    throw new Error("Missing return statement in function");
  }

  static final public Assign Assign() throws ParseException {
   ID n0;
   NodeToken n1;
   Token n2;
   Exp n3;
   NodeToken n4;
   Token n5;

   {
   }
    n0 = ID();
    n2 = jj_consume_token(ASSIGN);
                 n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Exp();
    n5 = jj_consume_token(SEMICOLON);
                    n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new Assign(n0,n1,n3,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayAssign ArrayAssign() throws ParseException {
   ID n0;
   NodeToken n1;
   Token n2;
   Exp n3;
   NodeToken n4;
   Token n5;
   NodeToken n6;
   Token n7;
   Exp n8;
   NodeToken n9;
   Token n10;

   {
   }
    n0 = ID();
    n2 = jj_consume_token(LBRACKET);
                   n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Exp();
    n5 = jj_consume_token(RBRACKET);
                   n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(ASSIGN);
                 n6 = JTBToolkit.makeNodeToken(n7);
    n8 = Exp();
    n10 = jj_consume_token(SEMICOLON);
                     n9 = JTBToolkit.makeNodeToken(n10);
     {if (true) return new ArrayAssign(n0,n1,n3,n4,n6,n8,n9);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp() throws ParseException {
   ExpFirst n0;
   NodeListOptional n1 = new NodeListOptional();
   ExpFirstAdjacent n2;

   {
   }
    n0 = ExpFirst();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_11;
      }
      n2 = ExpFirstAdjacent();
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
     {if (true) return new Exp(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public ExpFirstAdjacent ExpFirstAdjacent() throws ParseException {
   NodeToken n0;
   Token n1;
   ExpFirst n2;

   {
   }
    n1 = jj_consume_token(AND);
              n0 = JTBToolkit.makeNodeToken(n1);
    n2 = ExpFirst();
     {if (true) return new ExpFirstAdjacent(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public ExpFirst ExpFirst() throws ParseException {
   ExpSecond n0;
   NodeListOptional n1 = new NodeListOptional();
   ExpSecondAdjacent n2;

   {
   }
    n0 = ExpSecond();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LT:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_12;
      }
      n2 = ExpSecondAdjacent();
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
     {if (true) return new ExpFirst(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public ExpSecondAdjacent ExpSecondAdjacent() throws ParseException {
   NodeToken n0;
   Token n1;
   ExpSecond n2;

   {
   }
    n1 = jj_consume_token(LT);
             n0 = JTBToolkit.makeNodeToken(n1);
    n2 = ExpSecond();
     {if (true) return new ExpSecondAdjacent(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public ExpSecond ExpSecond() throws ParseException {
   Term n0;
   NodeListOptional n1 = new NodeListOptional();
   TermAdjacent n2;

   {
   }
    n0 = Term();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_13;
      }
      n2 = TermAdjacent();
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
     {if (true) return new ExpSecond(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public TermAdjacent TermAdjacent() throws ParseException {
   AddMinus n0;
   Term n1;

   {
   }
    n0 = AddMinus();
    n1 = Term();
     {if (true) return new TermAdjacent(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public AddMinus AddMinus() throws ParseException {
   NodeChoice n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;

   {
   }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      n2 = jj_consume_token(PLUS);
                  n1 = JTBToolkit.makeNodeToken(n2);
        n0 = new NodeChoice(n1, 0);
      break;
    case MINUS:
      n4 = jj_consume_token(MINUS);
                   n3 = JTBToolkit.makeNodeToken(n4);
        n0 = new NodeChoice(n3, 1);
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new AddMinus(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Term Term() throws ParseException {
   Factor n0;
   NodeListOptional n1 = new NodeListOptional();
   FactorAdjacent n2;
